# face-recognition-cpp-js

./: CMakeLists.txt  README.md  binding.gyp  index.js  main.cpp  main2.cpp  package-lock.json  package.json
src/: detector.cpp  detector.h  index.cpp
